vert profile added

--- a/calc_interp_model_to_flights.ipynb
+++ b/calc_interp_model_to_flights.ipynb
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "copy_flight_var_list = ['Year','flt','DOY','UTC','n_prof']\n",
+    "copy_flight_var_list = ['Year','flt','DOY','UTC','n_prof','GGALT']\n",
     "for i,rf in enumerate(RF):\n",
     "    for v in copy_flight_var_list:\n",
     "        rf_model[i][v] = rf[v]"
@@ -231,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
